@@ -34,12 +34,11 @@ Author: Nicolas Boulenguez <nicolas@debian.org>
  dependencies = { module=all-lto-plugin; on=all-libiberty; };
 --- a/src/gcc/ada/gcc-interface/Makefile.in
 +++ b/src/gcc/ada/gcc-interface/Makefile.in
-@@ -692,7 +692,7 @@ gnatlib-shared-default:
+@@ -692,6 +692,7 @@
  		$(GNATRTL_TASKING_OBJS) \
- 		$(SO_OPTS)libgnarl$(hyphen)$(LIBRARY_VERSION)$(soext).1 \
+ 		$(SO_OPTS)libgnarl$(hyphen)$(LIBRARY_VERSION)$(soext) \
  		-L. -lgnat$(hyphen)$(LIBRARY_VERSION) \
--		$(THREADSLIB)
-+		$(MISCLIB) $(THREADSLIB)
- 	cd $(RTSDIR) && $(LN_S) -f libgnarl$(hyphen)$(LIBRARY_VERSION)$(soext).1 \
- 		libgnarl$(hyphen)$(LIBRARY_VERSION)$(soext)
- 	$(CHMOD) a-wx $(RTSDIR)/*.ali
++		$(MISCLIB) \
+ 		$(THREADSLIB)
+ 	cd $(RTSDIR); $(LN_S) libgnat$(hyphen)$(LIBRARY_VERSION)$(soext) \
+ 		libgnat$(soext)
