@@ -20,7 +20,7 @@ Author: Nicolas Boulenguez <nicolas@debian.org>
 +         declare
 +            S : String renames Compilation_Switches.Table (A).all;
 +         begin
-+            if S'Length < 19            --
++            if S'Length < 19
 +              or else (S (S'First .. S'First + 18) /= "-fdebug-prefix-map="
 +                   and S (S'First .. S'First + 17) /= "-ffile-prefix-map="
 +                   and S (S'First .. S'First + 18) /= "-fmacro-prefix-map=")
