@@ -9,6 +9,7 @@ gcc-10 (10-20200405-1) UNRELEASED; urgency=medium
   * Remove some dependencies older than oldoldstable.
   * Build gnat. Remove obsolete no_install option for libgnat.
   * ada-lib-info-file-source-date-epoch.diff: port fix from gcc-9.
+  * ada: install libgnat-BV.so without adding a .1 suffix.
 
  -- Matthias Klose <doko@debian.org>  Sun, 05 Apr 2020 10:34:40 +0200
 
